--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "clean": "rimraf dist coverage",
-    "lint": "tslint src/**/*.ts",
-    "pretest": "npm run build",
-    "test": "npm run lint && jest --coverage",
-    "build": "tsc -p .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "test": "npm run lint && jest --coverage src",
+    "build": "tsc",
     "postversion": "git push && git push --tags"
   },
   "author": "Richard Adams",
@@ -37,22 +36,34 @@
   "bin": {
     "jsonUnion": "dist/cli/run.js"
   },
+  "files": [
+    "dist/**/*",
+    "!dist/**/tests"
+  ],
   "dependencies": {
-    "extend": "3.0.1",
-    "glob": "7.1.2",
-    "minimist": "1.2.0",
-    "mkdirp": "0.5.1"
+    "extend": "3.0.2",
+    "glob": "7.1.6",
+    "minimist": "1.2.5",
+    "mkdirp": "1.0.4"
   },
   "devDependencies": {
-    "@types/extend": "3.0.0",
-    "@types/glob": "5.0.35",
-    "@types/jest": "22.1.3",
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-typescript": "7.9.0",
+    "@types/extend": "3.0.1",
+    "@types/glob": "7.1.1",
+    "@types/jest": "25.2.1",
     "@types/minimist": "1.2.0",
-    "@types/mkdirp": "0.5.2",
-    "@types/node": "8.9.4",
-    "jest": "22.4.2",
-    "rimraf": "2.6.2",
-    "tslint": "5.9.1",
-    "typescript": "2.7.2"
+    "@types/mkdirp": "1.0.0",
+    "@typescript-eslint/eslint-plugin": "2.33.0",
+    "@typescript-eslint/parser": "2.33.0",
+    "babel-jest": "26.0.1",
+    "eslint": "7.0.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.3",
+    "jest": "26.0.1",
+    "prettier": "2.0.5",
+    "rimraf": "3.0.2",
+    "typescript": "3.9.2"
   }
 }
